updated backgroound worker to handle token sync

--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -6,6 +6,7 @@
   "permissions": [
     "activeTab",
     "storage",
+    "tabs",
     "notifications"
   ],
   "host_permissions": [
@@ -15,6 +16,9 @@
   ],
   "action": {
     "default_popup": "src/popup/index.html"
+  },
+  "externally_connectable": {
+    "matches": ["http://localhost:5173/*"]
   },
   "background": {
     "service_worker": "src/background/index.js",
