--- a/ml-service/requirements.txt
+++ b/ml-service/requirements.txt
@@ -21,3 +21,20 @@ nltk==3.8.1
 pydantic==2.5.3
 requests==2.31.0
 python-dotenv==1.0.1
+
+
+
+#new updated
+# Core Web Framework
+fastapi==0.109.0
+uvicorn==0.27.0
+pydantic==2.5.3
+
+# Machine Learning & Data Processing
+pandas==2.2.0
+scikit-learn==1.4.0
+joblib==1.3.2
+numpy==1.26.4
+
+# DOM & Text Analysis
+beautifulsoup4==4.12.3
